--- a/SITE/index.html
+++ b/SITE/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <h1>Lorem ipsum</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sequi distinctio suscipit, dolorum impedit, placeat nihil possimus atque corrupti quos, odit exercitationem molestias nulla repudiandae! Sequi voluptatum magni nesciunt placeat.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sequi distinctio suscipit, dolorum impedit, placeat nihil possimus atque corrupti quos, odit exercitationem molestias nulla repudiandae! Sequi voluptatum magni nesciunt placeat.
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda sequi distinctio suscipit, dolorum impedit, placeat nihil possimus atque corrupti quos, odit exercitationem molestias nulla repudiandae! Sequi voluptatum magni nesciunt placeat.
+        
+    </p>
     
 </body>
 </html>
